--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
       <label for="alamat">Alamat</label>
       <textarea id="alamat" placeholder="Tulis alamatmu di sini" required></textarea>
 
+      <label for="angkatan">Pilih Angkatan</label>
+        <select id="angkatan" required>
+        <option value="">-- Pilih Angkatan --</option>
+        <option value="2019">2019</option>
+        <option value="2020">2020</option>
+        <option value="2021">2021</option>
+        <option value="2022">2022</option>
+        <option value="2023">2023</option>
+        </select>
+
+        <label for="tanggal">Tanggal</label>
+        <input type="date" id="tanggal" required>
+
       <button type="submit">Kirim</button>
     </form>
   </div>
